<resources>
    <string name="app_name">E Restaurant</string>
    <string name="home_button_entree">Entree</string>
    <string name="home_button_meal">Meal</string>
    <string name="home_button_dessert">Dessert</string>
    <string name="button_placeholder">Button</string>
    <string name="item_image_description">Item image</string>
    <string name="cart_icon_description">Cart image</string>
    <string name="detail_button_minus">—</string>
    <string name="detail_default_quantity">1</string>
    <string name="detail_button_plus">+</string>
    <string name="detail_button_add_to_cart_default_value">Total $ %s</string>
    <string name="added_to_cart_info">Added to cart !</string>
    <string name="action_cart">cart</string>
    <string name="button_delete_text">Remove</string>
    <string name="button_order">Order ! $ %s</string>
</resources>