<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ItemDetailActivity">

    <include android:id="@+id/detail_top_bar" layout="@layout/top_bar" />

    <TextView
        android:id="@+id/detail_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_top_bar" />

    <TextView
        android:id="@+id/detail_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_default_quantity"
        app:layout_constraintEnd_toStartOf="@+id/detail_button_plus"
        app:layout_constraintStart_toEndOf="@+id/detail_button_minus"
        app:layout_constraintTop_toBottomOf="@+id/pager" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_item_title" />

    <Button
        android:id="@+id/detail_button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_quantity"
        app:layout_constraintTop_toTopOf="@+id/detail_quantity" />

    <Button
        android:id="@+id/detail_button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_button_minus"
        app:layout_constraintEnd_toStartOf="@+id/detail_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_quantity" />

    <Button
        android:id="@+id/detail_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_button_add_to_cart_default_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>